snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2-all.jar.sha512
0517310e46167f8e3ec8f2618c218bf6c1b45ab24f5de11c792082ebaada671f6206393fffac4d079aa657cf480258790ca8a9eceedbf771f9eb23adab8d78e1